fix home page pictures alignment

--- a/client/src/pages/Home.scss
+++ b/client/src/pages/Home.scss
@@ -28,3 +28,7 @@
 .grid > div > div > p {
   color: #006a71;
 };
+
+.grid > div > a > img{
+  height: 200px !important;
+};
